# koulu_repo

./: flake.nix
notes/: notes.md  python.md
python/: pyproject.toml
python/assets/: KT_13_01_2025.txt  KT_ratkaisu_15_01_2025.txt
python/tehtavat/: 15_01_25.py  main.py  projekti1.py  projekti2.py
