[project]
name = "tehtavat"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "platformdirs (>=4.3.6,<5.0.0)",
  "toml (>=0.10.2,<0.11.0)",
  "climage (>=0.2.2,<0.3.0)",
]

[tool.poetry.scripts]
dev = "tehtavat.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
